Laps problem solved and wrap up

--- a/src/Components/CountDown/Digit/Digit.css
+++ b/src/Components/CountDown/Digit/Digit.css
@@ -1,6 +1,12 @@
 .digit {
   width: 150px;
   height: 150px;
-  border: 2px solid;
+  border: 3px solid;
   border-radius: 50%;
+}
+@media (max-width: 700px) {
+  .digit {
+    width: 90px;
+    height: 90px;
+  }
 }
